--- a/styles/loginResponsive.css
+++ b/styles/loginResponsive.css
@@ -66,7 +66,8 @@
   @media (max-width: 600px) {
     .main_wrapper {
       flex-direction: column;
-      overflow: hidden;
+      overflow: visible;
+      padding-bottom: 16px;
     }
     .field_group {
       width: 70%;
@@ -85,6 +86,8 @@
     .login_section {
       margin-top: 10px;
       width: 90dvw;
+      height: auto;
+      padding: 20px;
     }
     .auth_options {
       display: none;
