--- a/styles/sidebarHeader.css
+++ b/styles/sidebarHeader.css
@@ -122,6 +122,7 @@ header {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
   background-color: #2a3647;
   color: white;
+  z-index: 2;
 }
 
 .nav-links {
